--- a/components/pandas/Transform_DataFrame/in_ApacheParquet_format/component.yaml
+++ b/components/pandas/Transform_DataFrame/in_ApacheParquet_format/component.yaml
@@ -9,7 +9,7 @@ description: |-
               Example: `df['prod'] = df['X'] * df['Y']` or `df = df[['X', 'prod']]`
 
       Outputs:
-          output_table: Transformed DataFrame.
+          transformed_table: Transformed DataFrame.
 
       Annotations:
           author: Alexey Volkov <alexey.volkov@ark-kun.com>
@@ -51,7 +51,7 @@ implementation:
                   Example: `df['prod'] = df['X'] * df['Y']` or `df = df[['X', 'prod']]`
 
           Outputs:
-              output_table: Transformed DataFrame.
+              transformed_table: Transformed DataFrame.
 
           Annotations:
               author: Alexey Volkov <alexey.volkov@ark-kun.com>
@@ -64,7 +64,7 @@ implementation:
           df.to_parquet(transformed_table_path)
 
       import argparse
-      _parser = argparse.ArgumentParser(prog='Pandas Transform DataFrame in ApacheParquet format', description='Transform DataFrame loaded from an ApacheParquet file.\n\n    Inputs:\n        table: DataFrame to transform.\n        transform_code: Transformation code. Code is written in Python and can consist of multiple lines.\n            The DataFrame variable is called "df".\n            Example: `df[\'prod\'] = df[\'X\'] * df[\'Y\']` or `df = df[[\'X\', \'prod\']]`\n\n    Outputs:\n        output_table: Transformed DataFrame.\n\n    Annotations:\n        author: Alexey Volkov <alexey.volkov@ark-kun.com>')
+      _parser = argparse.ArgumentParser(prog='Pandas Transform DataFrame in ApacheParquet format', description='Transform DataFrame loaded from an ApacheParquet file.\n\n    Inputs:\n        table: DataFrame to transform.\n        transform_code: Transformation code. Code is written in Python and can consist of multiple lines.\n            The DataFrame variable is called "df".\n            Example: `df[\'prod\'] = df[\'X\'] * df[\'Y\']` or `df = df[[\'X\', \'prod\']]`\n\n    Outputs:\n        transformed_table: Transformed DataFrame.\n\n    Annotations:\n        author: Alexey Volkov <alexey.volkov@ark-kun.com>')
       _parser.add_argument("--table", dest="table_path", type=str, required=True, default=argparse.SUPPRESS)
       _parser.add_argument("--transform-code", dest="transform_code", type=str, required=True, default=argparse.SUPPRESS)
       _parser.add_argument("--transformed-table", dest="transformed_table_path", type=_make_parent_dirs_and_return_path, required=True, default=argparse.SUPPRESS)
