--- a/components/pandas/Transform_DataFrame/in_ApacheParquet_format/component.yaml
+++ b/components/pandas/Transform_DataFrame/in_ApacheParquet_format/component.yaml
@@ -6,7 +6,10 @@ description: |-
           table: DataFrame to transform.
           transform_code: Transformation code. Code is written in Python and can consist of multiple lines.
               The DataFrame variable is called "df".
-              Example: `df['prod'] = df['X'] * df['Y']` or `df = df[['X', 'prod']]`
+              Examples:
+              - `df['prod'] = df['X'] * df['Y']`
+              - `df = df[['X', 'prod']]`
+              - `df.insert(0, "is_positive", df["X"] > 0)`
 
       Outputs:
           transformed_table: Transformed DataFrame.
@@ -48,7 +51,10 @@ implementation:
               table: DataFrame to transform.
               transform_code: Transformation code. Code is written in Python and can consist of multiple lines.
                   The DataFrame variable is called "df".
-                  Example: `df['prod'] = df['X'] * df['Y']` or `df = df[['X', 'prod']]`
+                  Examples:
+                  - `df['prod'] = df['X'] * df['Y']`
+                  - `df = df[['X', 'prod']]`
+                  - `df.insert(0, "is_positive", df["X"] > 0)`
 
           Outputs:
               transformed_table: Transformed DataFrame.
@@ -64,7 +70,7 @@ implementation:
           df.to_parquet(transformed_table_path)
 
       import argparse
-      _parser = argparse.ArgumentParser(prog='Pandas Transform DataFrame in ApacheParquet format', description='Transform DataFrame loaded from an ApacheParquet file.\n\n    Inputs:\n        table: DataFrame to transform.\n        transform_code: Transformation code. Code is written in Python and can consist of multiple lines.\n            The DataFrame variable is called "df".\n            Example: `df[\'prod\'] = df[\'X\'] * df[\'Y\']` or `df = df[[\'X\', \'prod\']]`\n\n    Outputs:\n        transformed_table: Transformed DataFrame.\n\n    Annotations:\n        author: Alexey Volkov <alexey.volkov@ark-kun.com>')
+      _parser = argparse.ArgumentParser(prog='Pandas Transform DataFrame in ApacheParquet format', description='Transform DataFrame loaded from an ApacheParquet file.\n\n    Inputs:\n        table: DataFrame to transform.\n        transform_code: Transformation code. Code is written in Python and can consist of multiple lines.\n            The DataFrame variable is called "df".\n            Examples:\n            - `df[\'prod\'] = df[\'X\'] * df[\'Y\']`\n            - `df = df[[\'X\', \'prod\']]`\n            - `df.insert(0, "is_positive", df["X"] > 0)`\n\n    Outputs:\n        transformed_table: Transformed DataFrame.\n\n    Annotations:\n        author: Alexey Volkov <alexey.volkov@ark-kun.com>')
       _parser.add_argument("--table", dest="table_path", type=str, required=True, default=argparse.SUPPRESS)
       _parser.add_argument("--transform-code", dest="transform_code", type=str, required=True, default=argparse.SUPPRESS)
       _parser.add_argument("--transformed-table", dest="transformed_table_path", type=_make_parent_dirs_and_return_path, required=True, default=argparse.SUPPRESS)
