--- a/components/CatBoost/Predict_class_probabilities/from_CSV/component.yaml
+++ b/components/CatBoost/Predict_class_probabilities/from_CSV/component.yaml
@@ -82,7 +82,7 @@ implementation:
           model = CatBoost()
           model.load_model(model_path)
 
-          predictions = model.predict(eval_data, prediction_type='Probabilities')
+          predictions = model.predict(eval_data, prediction_type='Probability')
           numpy.savetxt(predictions_path, predictions)
 
       import argparse
