Switch cloudbuild jobs back to n1

--- a/test/cloudbuild/mkp_verify.yaml
+++ b/test/cloudbuild/mkp_verify.yaml
@@ -15,7 +15,7 @@ steps:
      
 timeout: '3600s'
 options:
-  machineType: E2_HIGHCPU_8
+  machineType: N1_HIGHCPU_8
 
 substitutions:
   _DEPLOYER_VERSION: ''
