--- a/manifests/kustomize/base/pipeline/ml-pipeline-persistenceagent-deployment.yaml
+++ b/manifests/kustomize/base/pipeline/ml-pipeline-persistenceagent-deployment.yaml
@@ -19,10 +19,8 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-          # If you want a different TTL_SECONDS_AFTER_WORKFLOW_FINISH than the
-          # default 1 day, please specify it here as demonstrated below.
-          # - name: TTL_SECONDS_AFTER_WORKFLOW_FINISH
-          #   value: "172800"
+          - name: TTL_SECONDS_AFTER_WORKFLOW_FINISH
+            value: "86400"
         image: gcr.io/ml-pipeline/persistenceagent:dummy
         imagePullPolicy: IfNotPresent
         name: ml-pipeline-persistenceagent
