chore(marketplace): fix version in release note

--- a/manifests/gcp_marketplace/schema.yaml
+++ b/manifests/gcp_marketplace/schema.yaml
@@ -3,8 +3,7 @@ x-google-marketplace:
   applicationApiVersion: v1beta1
   publishedVersion: 1.0.0-rc.2
   publishedVersionMetadata:
-    releaseNote: >-
-      Based on 0.5.1 version.
+    releaseNote: Based on 1.0.0-rc.2 version.
     releaseTypes:
     - Feature
     recommended: false
