--- a/components/aws/sagemaker/hyperparameter_tuning/component.yaml
+++ b/components/aws/sagemaker/hyperparameter_tuning/component.yaml
@@ -150,7 +150,7 @@ outputs:
     description: 'The registry path of the Docker image that contains the training algorithm'
 implementation:
   container:
-    image: akartsky/aws-kubeflow-sagemaker:latest
+    image: amazon/aws-sagemaker-kfp-components:0.5.0
     command: ['python3']
     args: [
       hyperparameter_tuning.py,
