--- a/components/aws/sagemaker/workteam/component.yaml
+++ b/components/aws/sagemaker/workteam/component.yaml
@@ -36,7 +36,7 @@ outputs:
   - {name: workteam_arn, description: 'The ARN of the workteam.'}
 implementation:
   container:
-    image: akartsky/aws-kubeflow-sagemaker:latest
+    image: amazon/aws-sagemaker-kfp-components:0.5.0
     command: ['python3']
     args: [
       workteam.py,
