--- a/components/gcp/bigquery/query/to_table/component.yaml
+++ b/components/gcp/bigquery/query/to_table/component.yaml
@@ -49,6 +49,8 @@ inputs:
       for details.
     default: ''
     type: Dict
+  - name: table
+    type: String
 outputs:
   - name: MLPipeline UI metadata
     type: UI metadata
