--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -16,4 +16,6 @@ markComment: >
   recent activity. It will be closed if no further activity occurs. Thank you
   for your contributions.
 # Comment to post when closing a stale issue. Set to `false` to disable
-closeComment: false
+closeComment: >
+  This issue has been automatically closed because it has not had recent
+  activity. Please comment "/reopen" to reopen it.
