--- a/manifests/kustomize/base/kustomization.yaml
+++ b/manifests/kustomize/base/kustomization.yaml
@@ -29,6 +29,8 @@ images:
   newTag: 1.0.0-rc.2
 - name: gcr.io/ml-pipeline/cache-deployer
   newTag: 1.0.0-rc.2
+- name: gcr.io/ml-pipeline/metadata-envoy
+  newTag: 1.0.0-rc.2
 # Used by Kustomize
 configMapGenerator:
 - name: pipeline-install-config
