--- a/manifests/kustomize/env/platform-agnostic/minio/kustomization.yaml
+++ b/manifests/kustomize/env/platform-agnostic/minio/kustomization.yaml
@@ -5,3 +5,10 @@ resources:
 - minio-deployment.yaml
 - minio-pvc.yaml
 - minio-service.yaml
+
+secretGenerator:
+- name: minio-artifact-secret
+  env: minio-artifact-secret.env
+generatorOptions:
+  # minio-artifact-secret needs to be referred by exact name
+  disableNameSuffixHash: true
