--- a/manifests/kustomize/env/platform-agnostic/minio/minio-deployment.yaml
+++ b/manifests/kustomize/env/platform-agnostic/minio/minio-deployment.yaml
@@ -21,9 +21,15 @@ spec:
         - /data
         env:
         - name: MINIO_ACCESS_KEY
-          value: minio
+          valueFrom:
+            secretKeyRef:
+              name: minio-artifact-secret
+              key: accesskey
         - name: MINIO_SECRET_KEY
-          value: minio123
+          valueFrom:
+            secretKeyRef:
+              name: minio-artifact-secret
+              key: secretkey
         image: gcr.io/ml-pipeline/minio:RELEASE.2019-08-14T20-37-41Z-license-compliance
         name: minio
         ports:
