--- a/components/google-cloud/storage/upload_to_unique_uri/component.yaml
+++ b/components/google-cloud/storage/upload_to_unique_uri/component.yaml
@@ -3,6 +3,7 @@ description: Upload to GCS with unique URI suffix
 inputs:
 - {name: Data}
 - {name: GCS path prefix, type: URI}
+- {name: GSUtil options, type: String, default: '-m'}
 outputs:
 - {name: GCS path, type: URI}
 implementation:
@@ -16,9 +17,10 @@ implementation:
             if [ -n "${GOOGLE_APPLICATION_CREDENTIALS}" ]; then
                 gcloud auth activate-service-account --key-file="${GOOGLE_APPLICATION_CREDENTIALS}"
             fi
-            gsutil cp -r "$0" "$1"
+            gsutil $3 cp -r "$0" "$1"
             mkdir -p "$(dirname "$2")"
             echo "$1" > "$2"
         - inputPath: Data
         - concat: [{inputValue: GCS path prefix}, '{{workflow.uid}}_{{pod.name}}']
         - outputPath: GCS path
+        - inputValue: GSUtil options
