--- a/manifests/kustomize/env/gcp/minio-gcs-gateway/kustomization.yaml
+++ b/manifests/kustomize/env/gcp/minio-gcs-gateway/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 - minio-gcs-gateway-service.yaml
 
 secretGenerator:
-- name: minio-artifact-secret
+- name: mlpipeline-minio-artifact
   env: minio-artifact-secret.env
 generatorOptions:
   # minio-artifact-secret needs to be referred by exact name
