--- a/manifests/kustomize/env/platform-agnostic/minio/minio-deployment.yaml
+++ b/manifests/kustomize/env/platform-agnostic/minio/minio-deployment.yaml
@@ -23,12 +23,12 @@ spec:
         - name: MINIO_ACCESS_KEY
           valueFrom:
             secretKeyRef:
-              name: minio-artifact-secret
+              name: mlpipeline-minio-artifact
               key: accesskey
         - name: MINIO_SECRET_KEY
           valueFrom:
             secretKeyRef:
-              name: minio-artifact-secret
+              name: mlpipeline-minio-artifact
               key: secretkey
         image: gcr.io/ml-pipeline/minio:RELEASE.2019-08-14T20-37-41Z-license-compliance
         name: minio
