--- a/manifests/kustomize/env/gcp/minio-gcs-gateway/kustomization.yaml
+++ b/manifests/kustomize/env/gcp/minio-gcs-gateway/kustomization.yaml
@@ -9,5 +9,5 @@ secretGenerator:
 - name: mlpipeline-minio-artifact
   env: minio-artifact-secret.env
 generatorOptions:
-  # minio-artifact-secret needs to be referred by exact name
+  # mlpipeline-minio-artifact needs to be referred by exact name
   disableNameSuffixHash: true
