--- a/manifests/kustomize/env/platform-agnostic/minio/kustomization.yaml
+++ b/manifests/kustomize/env/platform-agnostic/minio/kustomization.yaml
@@ -7,8 +7,8 @@ resources:
 - minio-service.yaml
 
 secretGenerator:
-- name: minio-artifact-secret
+- name: mlpipeline-minio-artifact
   env: minio-artifact-secret.env
 generatorOptions:
-  # minio-artifact-secret needs to be referred by exact name
+  # mlpipeline-minio-artifact needs to be referred by exact name
   disableNameSuffixHash: true
