--- a/components/aws/sagemaker/deploy/component.yaml
+++ b/components/aws/sagemaker/deploy/component.yaml
@@ -1,4 +1,4 @@
-name: 'Sagemaker - Deploy Model'
+name: 'SageMaker - Deploy Model'
 description: |
   Deploy Machine Learning Model Endpoint in SageMaker
 inputs:
@@ -132,7 +132,8 @@ implementation:
       --resource_encryption_key, {inputValue: resource_encryption_key},
       --endpoint_config_tags, {inputValue: endpoint_config_tags},
       --endpoint_name, {inputValue: endpoint_name},
-      --endpoint_tags, {inputValue: endpoint_tags}
+      --endpoint_tags, {inputValue: endpoint_tags},
+      --endpoint_name_output_path, {outputPath: endpoint_name}
     ]
     fileOutputs:
       endpoint_name: /tmp/endpoint_name.txt
