--- a/components/aws/sagemaker/hyperparameter_tuning/component.yaml
+++ b/components/aws/sagemaker/hyperparameter_tuning/component.yaml
@@ -189,7 +189,12 @@ implementation:
       --checkpoint_config, {inputValue: checkpoint_config},
       --warm_start_type, {inputValue: warm_start_type},
       --parent_hpo_jobs, {inputValue: parent_hpo_jobs},
-      --tags, {inputValue: tags}
+      --tags, {inputValue: tags},
+      --hpo_job_name_output_path, {outputPath: hpo_job_name},
+      --model_artifact_url_output_path, {outputPath: model_artifact_url},
+      --best_job_name_output_path, {outputPath: best_job_name},
+      --best_hyperparameters_output_path, {outputPath: best_hyperparameters},
+      --training_image_output_path, {outputPath: training_image}
     ]
     fileOutputs:
       hpo_job_name: /tmp/hpo_job_name.txt
