--- a/components/aws/sagemaker/process/component.yaml
+++ b/components/aws/sagemaker/process/component.yaml
@@ -113,7 +113,9 @@ implementation:
       --vpc_subnets, {inputValue: vpc_subnets},
       --network_isolation, {inputValue: network_isolation},
       --traffic_encryption, {inputValue: traffic_encryption},
-      --tags, {inputValue: tags}
+      --tags, {inputValue: tags},
+      --job_name_output_path, {outputPath: job_name},
+      --output_artifacts_output_path, {outputPath: output_artifacts}
     ]
     fileOutputs:
       job_name: /tmp/job_name.txt
