--- a/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/minio.yaml
+++ b/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/minio.yaml
@@ -43,7 +43,7 @@ spec:
             - name: PROJECT_ID
               valueFrom:
                 configMapKeyRef:
-                  name: {{ .Values.gcpDefaultConfigName}}
+                  name: "{{ .Values.gcpDefaultConfigName }}"
                   key: "project_id"
             - name: MINIO_ACCESS_KEY
               value: minio
