--- a/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/pipeline.yaml
+++ b/manifests/gcp_marketplace/chart/kubeflow-pipelines/templates/pipeline.yaml
@@ -705,20 +705,27 @@ spec:
     spec:
       containers:
         - env:
+            {{ if .Values.managedstorage.enabled }}
+            - name: HAS_DEFAULT_BUCKET
+              value: "true"
+            - name: BUCKET_NAME
+              value: "{{ .Values.gcsBucketName }}"
+            {{ else }}
             - name: HAS_DEFAULT_BUCKET
               valueFrom:
                 configMapKeyRef:
-                  name: {{ .Values.gcpDefaultConfigName}}
+                  name: "{{ .Values.gcpDefaultConfigName }}"
                   key: "has_default_bucket"
             - name: BUCKET_NAME
               valueFrom:
                 configMapKeyRef:
-                  name: {{ .Values.gcpDefaultConfigName}}
+                  name: "{{ .Values.gcpDefaultConfigName }}"
                   key: "bucket_name"
+            {{ end }}
             - name: PROJECT_ID
               valueFrom:
                 configMapKeyRef:
-                  name: {{ .Values.gcpDefaultConfigName}}
+                  name: "{{ .Values.gcpDefaultConfigName }}"
                   key: "project_id"
             - name: POD_NAMESPACE
               valueFrom:
