--- a/manifests/gcp_marketplace/schema.yaml
+++ b/manifests/gcp_marketplace/schema.yaml
@@ -92,6 +92,40 @@ x-google-marketplace:
       - apiGroups: ['apiextensions.k8s.io', 'rbac.authorization.k8s.io']
         resources: ['customresourcedefinitions', 'clusterroles', 'clusterrolebindings']
         verbs: ['*']
+    # For CRs in the following deployer-applied Roles:
+    # - kubeflow-pipelines-cache-role
+    # - kubeflow-pipelines-metadata-writer-role
+    # - ml-pipeline
+    # - ml-pipeline-persistenceagent-role
+    # - ml-pipeline-scheduledworkflow-role
+    # - ml-pipeline-viewer-controller-role
+    # - ml-pipeline-ui
+    # - pipeline-runner
+    - type: Role
+      rulesType: CUSTOM
+      rules:
+      - apiGroups: ['argoproj.io']
+        resources: ['workflows']
+        verbs: ['*']
+      - apiGroups: ['kubeflow.org']
+        resources: ['*']
+        verbs: ['*']
+      # Not a CR, but an alpha resource so not present in
+      # all clusters (and their `admin` Role definition)
+      - apiGroups: ['snapshot.storage.k8s.io']
+        resources: ['volumesnapshots']
+        verbs: ['*']
+    # Marketplace does not provision default
+    # Role/binding if custom Role is provided
+    - type: Role
+      rulesType: CUSTOM
+      rules:
+      - apiGroups: ['app.k8s.io']
+        resources: ['applications']
+        verbs: ['*']
+    - type: Role
+      rulesType: PREDEFINED
+      rulesFromRoleName: admin
   clusterConstraints:
     resources:
     - replicas: 3
