--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -51,7 +51,7 @@ RUN set -e; \
     < /samples/sample_config.json jq .[].file --raw-output | while read pipeline_yaml; do \
         pipeline_py="${pipeline_yaml%.yaml}"; \
         mv "$pipeline_py" "${pipeline_py}.tmp"; \
-        echo "import kfp; kfp.components.default_base_image_or_builder='gcr.io/google-appengine/python:2020-03-31-141326" | cat - "${pipeline_py}.tmp" > "$pipeline_py"; \
+        echo 'import kfp; kfp.components.default_base_image_or_builder="gcr.io/google-appengine/python:2020-03-31-141326"' | cat - "${pipeline_py}.tmp" > "$pipeline_py"; \
         python3 "$pipeline_py"; \
     done
 
