--- a/backend/src/apiserver/visualization/requirements.txt
+++ b/backend/src/apiserver/visualization/requirements.txt
@@ -14,3 +14,4 @@ tensorflow-metadata==0.21.1
 tensorflow-model-analysis==0.21.5
 tensorflow-data-validation==0.21.1
 tornado==6.0.2
+google-api-core==1.16.0
