updated with new test

--- a/test/sample-test/configs/loop_parallelism.yaml
+++ b/test/sample-test/configs/loop_parallelism.yaml
@@ -12,23 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import kfp.dsl as dsl
-import kfp
-
-
-@kfp.components.create_component_from_func
-def print_op(s: str):
-    print(s)
-
-@dsl.pipeline(name='my-pipeline')
-def pipeline():
-    loop_args = [{'A_a': 1, 'B_b': 2}, {'A_a': 10, 'B_b': 20}]
-    with dsl.Parallelism(parallelism=10):
-        with dsl.ParallelFor(loop_args) as item:
-            print_op(item)
-            print_op(item.A_a)
-            print_op(item.B_b)
-
-
-if __name__ == '__main__':
-    kfp.compiler.Compiler().compile(pipeline, __file__ + '.yaml')
+test_name: loop_parallelism
+arguments:
+  output:
+run_pipeline: True
