--- a/test/sample-test/configs/parallelism_sub_dag.yaml
+++ b/test/sample-test/configs/parallelism_sub_dag.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-test_name: loop_parallelism
+test_name: parallelism_sub_dag
 arguments:
   output:
 run_pipeline: True
