--- a/test/sample_test.yaml
+++ b/test/sample_test.yaml
@@ -103,7 +103,7 @@ spec:
               - container_build
               - parameterized_tfx_oss
               - iris
-              - loop_parallelism
+              - parallelism_sub_dag
             when: "{{inputs.parameters.is-integration-test}} == true"
     # Build and push image
     - name: build-image-by-dockerfile
