--- a/components/aws/sagemaker/batch_transform/component.yaml
+++ b/components/aws/sagemaker/batch_transform/component.yaml
@@ -98,7 +98,7 @@ outputs:
   - {name: output_location,    description: 'S3 URI of the transform job results.'}
 implementation:
   container:
-    image: surajkota/sagemaker-kfp:20200722-1
+    image: amazon/aws-sagemaker-kfp-components:0.6.0
     command: ['python3']
     args: [
       batch_transform.py,
