--- a/components/aws/sagemaker/tests/integration_tests/.env.example
+++ b/components/aws/sagemaker/tests/integration_tests/.env.example
@@ -10,6 +10,7 @@ S3_DATA_BUCKET=my-data-bucket
 
 # If you hope to use an existing EKS cluster, rather than creating a new one.
 # EKS_EXISTING_CLUSTER=my-eks-cluster
+# SKIP_OIDC_SETUP=true
 
 # If you would like to skip the FSx set-up and tests
 # SKIP_FSX_TESTS=true
