Removes recurse configuration for simplicity
* always enabled, as per current components

--- a/components/google-cloud/storage/download/component.yaml
+++ b/components/google-cloud/storage/download/component.yaml
@@ -1,7 +1,6 @@
 name: Download from GCS
 inputs:
 - {name: GCS path, type: GCSPath}
-- {name: Recurse, type: Boolean, default: True}
 outputs:
 - {name: Data}
 implementation:
@@ -12,7 +11,6 @@ implementation:
         - -ex
         - -c
         - |
-            [ "$2" = False ] || rsync_flags=-r
             if [ -n "${GOOGLE_APPLICATION_CREDENTIALS}" ]; then
                 gcloud auth activate-service-account --key-file="${GOOGLE_APPLICATION_CREDENTIALS}"
             fi
@@ -24,7 +22,6 @@ implementation:
                 mkdir -p "$(dirname "$1")"
             fi
             
-            gsutil -m rsync $rsync_flags "$0" "$1" # gsutil cp has different path handling than Linux cp. It always puts the source directory (name) inside the destination directory. gsutil rsync does not have that problem.
+            gsutil -m rsync -r "$0" "$1" # gsutil cp has different path handling than Linux cp. It always puts the source directory (name) inside the destination directory. gsutil rsync does not have that problem.
         - inputValue: GCS path
         - outputPath: Data
-        - inputValue: Recurse
