--- a/components/google-cloud/storage/upload_dir_contents/component.yaml
+++ b/components/google-cloud/storage/upload_dir_contents/component.yaml
@@ -4,7 +4,6 @@ inputs:
 - {name: GCS path, type: GCSPath}
 - {name: Parallel composite upload threshold, default: '150M'}
 - {name: Delete, type: Boolean, default: False}
-- {name: Recurse, type: Boolean, default: True}
 outputs:
 - {name: GCS path, type: GCSPath}
 implementation:
@@ -17,11 +16,10 @@ implementation:
         - |
             [ -z "$3" ] || flags="-o GSUtil:parallel_composite_upload_threshold=$3"
             [ "$4" = True ] && rsync_flags=-d || true
-            [ "$5" = False ] || rsync_flags="$rsync_flags -r"
             if [ -n "${GOOGLE_APPLICATION_CREDENTIALS}" ]; then
                 gcloud auth activate-service-account --key-file="${GOOGLE_APPLICATION_CREDENTIALS}"
             fi
-            gsutil -m $flags rsync $rsync_flags "$0" "$1"
+            gsutil -m $flags rsync $rsync_flags -r "$0" "$1"
             mkdir -p "$(dirname "$2")"
             echo "$1" > "$2"
         - inputPath: Data
@@ -29,4 +27,3 @@ implementation:
         - outputPath: GCS path
         - inputValue: Parallel composite upload threshold
         - inputValue: Delete
-        - inputValue: Recurse
