--- a/components/google-cloud/storage/upload_to_explicit_uri/component.yaml
+++ b/components/google-cloud/storage/upload_to_explicit_uri/component.yaml
@@ -3,7 +3,6 @@ inputs:
 - {name: Data}
 - {name: GCS path, type: GCSPath}
 - {name: Parallel composite upload threshold, default: '150M'}
-- {name: Recurse, type: Boolean, default: True}
 outputs:
 - {name: GCS path, type: GCSPath}
 implementation:
@@ -15,15 +14,13 @@ implementation:
         - -c
         - |
             [ -z "$3" ] || flags="-o GSUtil:parallel_composite_upload_threshold=$3"
-            [ "$4" = False ] || cp_flags=-r
             if [ -n "${GOOGLE_APPLICATION_CREDENTIALS}" ]; then
                 gcloud auth activate-service-account --key-file="${GOOGLE_APPLICATION_CREDENTIALS}"
             fi
-            gsutil -m $flags cp $cp_flags "$0" "$1"
+            gsutil -m $flags cp -r "$0" "$1"
             mkdir -p "$(dirname "$2")"
             echo "$1" > "$2"
         - inputPath: Data
         - inputValue: GCS path
         - outputPath: GCS path
         - inputValue: Parallel composite upload threshold
-        - inputValue: Recurse
