Add unit test black check

--- a/components/aws/sagemaker/tests/unit_tests/Dockerfile
+++ b/components/aws/sagemaker/tests/unit_tests/Dockerfile
@@ -14,4 +14,4 @@ COPY ./sagemaker/ /app/
 
 WORKDIR /app/tests/unit_tests/
 
-ENTRYPOINT [ "bash", "./run_all_tests.sh" ]
+ENTRYPOINT [ "bash", "./run_automated_test.sh" ]
