--- a/manifests/gcp_marketplace/schema.yaml
+++ b/manifests/gcp_marketplace/schema.yaml
@@ -1,9 +1,9 @@
 x-google-marketplace:
   schemaVersion: v2
   applicationApiVersion: v1beta1
-  publishedVersion: 1.0.0-rc.5
+  publishedVersion: 1.0.0
   publishedVersionMetadata:
-    releaseNote: Based on 1.0.0-rc.5 version.
+    releaseNote: Based on 1.0.0 version.
     releaseTypes:
     - Feature
     recommended: false
