fix(cache): adds certificate approver permission to kubeflow-pipelines-cache-deployer-role. Fixes #4138 (#4246)
* certificat approval

* update pr

* update pr

* update pr

* update pr

* remove list&watch

--- a/manifests/kustomize/base/cache-deployer/cluster-scoped/cache-deployer-clusterrole.yaml
+++ b/manifests/kustomize/base/cache-deployer/cluster-scoped/cache-deployer-clusterrole.yaml
@@ -22,3 +22,11 @@ rules:
   verbs:
   - create
   - get
+- apiGroups:
+  - certificates.k8s.io
+  resources:
+  - signers
+  resourceNames:
+  - kubernetes.io/*
+  verbs:
+  - approve  
